--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
 				<div class="org">XHTH Asset Management Co., Ltd.</div>
 				<ul class="list">
 					<li>Developed a event driven strategy and used it to trade.(20 Million Yuan)</li>
-					<li>Developed some alpha strategy and used them to trade.(Sharpe 5.0, 30 Million Yuan)</li>
+					<li>Developed some alpha strategies and used them to trade.(Sharpe 5.0, 30 Million Yuan)</li>
 				</ul>
 			</div>
 			<div class="item">
