chinese-version-revise

--- a/简历.html
+++ b/简历.html
@@ -85,7 +85,7 @@
 		<div class="col-right">
 			<div class="item">
 				<h3>Insanity Alpha</h3>
-				<p class="overview">在我搭建的Alpha框架下，遍历数十万因子，并从中选取出具有预测能力的因子来构建Alpha策略。</p>
+				<p class="overview">在我搭建的Alpha框架下，遍历数十万个因子，并从中选取出具有预测能力的因子来构建Alpha策略。</p>
 				<ul class="list">
 					<li>因为有足够多的因子，因此可以构建出50个甚至更多的相关性很低的子策略，然后将这些子策略合并成一个最终的大策略。</li>
 					<li>在选择因子时，使用行业的平均回报作为衡量基准。</li>
