--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
 				<div class="org">University of International Business and Economics</div>
 			</div>	
 			<div class="item">
-				<h3>Department of forest</h3>
+				<h3>Department of Forest</h3>
 				<div class="date">February 2012 - June 2012</div>
 				<div class="org">Taiwan's National Chung Hsing University</div>
 			</div>
@@ -56,9 +56,9 @@
 				<div class="org">XHTH Asset Management Co., Ltd.</div>
 				<ul class="list">
 					<li>Developed some event driven strategies(Analyst Reports, Company Earnings Reports) and used them to trade.(20 Million Yuan)</li>
-					<li>Developed some alpha strategies(HS300 industry neutral, ZZ500 industry neutral) and used them to trade.(Sharpe 5.0, 30 Million Yuan)</li>
-					<li>Grade fund arbitrage: I Constructed a tool to hedge most of the price fluctuations of the mother fund, so I am able to obtain the premium and discount in the Grade fund market with low risk.</li>
-					<li>Fundamental alpha(Not industry neutral): I chose the stocks with low PE, low PB and high dividend yield in my portfolio. Different thresholds used to define the low PE and low PB depend on different market conditions.</li>
+					<li>Developed some alpha strategies and used them to trade.(Sharpe 5.0, 30 Million Yuan)</li>
+					<li>Constructed tools to hedge most of the price fluctuations of the mother fund, as to obtain the premiums and discounts in the Grade fund market with low risk.</li>
+					<li>Fundamental alpha(Not industry neutral): Chose the stocks with low PE, low PB and high dividend. Different thresholds depend on different market conditions.</li>
 				</ul>
 			</div>
 			<div class="item">
@@ -66,7 +66,7 @@
 				<div class="date">February 2013 - August 2013</div>
 				<div class="org">Shanghai Mingshi Investment Management Co., Ltd.</div>
 				<ul class="list">
-					<li>Set up the stock trading system and used it for stock index future arbitrage.(I also developed 5 similar stock trading systems corresponded to different security companies for Mingshi after my internship.)</li>
+					<li>Set up trading system and used it for stock index future arbitrage.(extra 5 similar trading systems correspondded to different security companies after my internship.)</li>
 					<li>Strategy research: expolited the finance news to trade stock.</li>
                                         <li>Debugged and maintained the futures transaction system(CTP).</li>
 				</ul>
@@ -87,11 +87,11 @@
 		<div class="col-right">
 			<div class="item">
 				<h3>Insanity Alpha</h3>
-				<p class="overview">I traversed hundreds of thousands of factors and chose the most predictive factors to make up an alpha strategy.</p>
+				<p class="overview">I traversed massive factors and chose the most predictive factors.</p>
 				<ul class="list">
-					<li>I used average return of respective sector as bencmark when search the predictive factors. It reduces the influence of the SMB factor(Fama-French three factors model).</li>
-					<li>I used many factors to make up 50 low correlative sub-strategies, then combined the sub-strategies to form a final strategy. There are more than 500 stocks in final portfolio.</li>
-					<li>I Applied julia language in Bake test. It make possible the Billion Magnitude CPU calculations.</li>
+					<li>Used average return of respective sector as bencmark when search the predictive factors. It reduces the influence of the SMB factor(Fama-French three factors model).</li>
+					<li>Make up 50 low correlative sub-strategies firstly, then combined the sub-strategies to form a final strategy. There are more than 500 stocks in final portfolio.</li>
+					<li>Applied julia language in Bake test. It make possible the Billion Magnitude CPU calculations.</li>
 					
 				</ul>
 			</div>
@@ -110,8 +110,8 @@
 				<h3>Sector Rotation</h3>
 				<p class="overview">Herd behavior are more prominent among chinese investors, which result in the momentum effect in the A-share market.</p>
 				<ul class="list">
-					<li>I constructed the indexes for all sectors. The price fluctuations of the indexes represent the overall price fluctions of respective sectors.</li>
-					<li>I tried to quantize the momentum effect of sectors.</li>
+					<li>Constructed the indexes for all sectors. The price fluctuations of the indexes represent the overall price fluctions of respective sectors.</li>
+					<li>Tried to quantize the momentum effect of sectors.</li>
 				</ul>
 			</div>
 			
