--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
 	<header>
 		<h1>Ziyang Lin</h1>
 		<ul class="social">
-			<li><a href="lzy.books@foxmail.com"><i class="fa fa-envelope-square"></i> lzy.books@gmail.com</a></li>
+			<li><a href="lzy.books@foxmail.com"><i class="fa fa-envelope-square"></i> lzy.books@foxmail.com</a></li>
 			<li><a href="https://www.linkedin.com/in/ziyanglin"><i class="fa fa-linkedin-square"></i> linkedin.com/in/ziyanglin</a></li>
 		</ul>
 		<ul class="contact">
@@ -110,7 +110,7 @@
 				<h3>Sector Rotation</h3>
 				<p class="overview">Herd behavior are more prominent among chinese investors, which result in the momentum effect in the A-share market.</p>
 				<ul class="list">
-					<li>Constructed the indexes for all sectors. The price fluctuations of the indexes represent the overall price fluctions of respective sectors.</li>
+					<li>Constructed tradable indexes for all sectors. The price fluctuations of the indexes represent the overall price fluctions of respective sectors.</li>
 					<li>Tried to quantize the momentum effect of sectors.</li>
 				</ul>
 			</div>
