--- a/resume.html
+++ b/resume.html
@@ -57,7 +57,7 @@
 				<ul class="list">
 					<li>Developed some event driven strategies(Analyst Reports, Company Earnings Reports) and used them to trade.(20 Million Yuan)</li>
 					<li>Developed some alpha strategies and used them to trade.(Sharpe 5.0, 30 Million Yuan)</li>
-					<li>Constructed tools to hedge most of the price fluctuations of the mother fund, as to obtain the premiums and discounts in the Grade fund market with low risk.</li>
+					<li>Constructed tools to hedge most of the price fluctuations of the mother fund, so as to obtain the premiums and discounts in the Grade fund market with low risk.</li>
 					<li>Fundamental alpha(Not industry neutral): Chose the stocks with low PE, low PB and high dividend. Different thresholds depend on different market conditions.</li>
 				</ul>
 			</div>
@@ -66,13 +66,13 @@
 				<div class="date">February 2013 - August 2013</div>
 				<div class="org">Shanghai Mingshi Investment Management Co., Ltd.</div>
 				<ul class="list">
-					<li>Set up trading system and used it for stock index future arbitrage.(extra 5 similar trading systems correspondded to different security companies after my internship.)</li>
-					<li>Strategy research: expolited the finance news to trade stock.</li>
+					<li>Set up trading system and used it for stock index future arbitrage.(developed 5 extra similar trading systems corresponded to different security companies after my internship.)</li>
+					<li>Strategy research: exploited the finance news to trade stock.</li>
                                         <li>Debugged and maintained the futures transaction system(CTP).</li>
 				</ul>
 			</div>
 			<div class="item">
-				<h3>Develop the bond pricing models for SINOVAR.</h3>
+				<h3>Developed the bond pricing models for SINOVAR.</h3>
 				<div class="date">August 2014 - September 2014</div>
 			</div>
 
@@ -89,9 +89,9 @@
 				<h3>Insanity Alpha</h3>
 				<p class="overview">I traversed massive factors and chose the most predictive factors.</p>
 				<ul class="list">
-					<li>Used average return of respective sector as bencmark when search the predictive factors. It reduces the influence of the SMB factor(Fama-French three factors model).</li>
-					<li>Make up 50 low correlative sub-strategies firstly, then combined the sub-strategies to form a final strategy. There are more than 500 stocks in final portfolio.</li>
-					<li>Applied julia language in Bake test. It make possible the Billion Magnitude CPU calculations.</li>
+					<li>Used average return of respective sector as benchmark when searching the predictive factors. It reduces the influence of the SMB factor(Fama-French three factors model).</li>
+					<li>Made up 50 low correlative sub-strategies first, then combined the sub-strategies to form a final strategy. There were more than 500 stocks in final portfolio.</li>
+					<li>Applied the Julia language in Bake test. It made the Billion Magnitude CPU calculations possible.</li>
 					
 				</ul>
 			</div>
@@ -108,9 +108,9 @@
 
 			<div class="item">
 				<h3>Sector Rotation</h3>
-				<p class="overview">Herd behavior are more prominent among chinese investors, which result in the momentum effect in the A-share market.</p>
+				<p class="overview">Herd behavior are more prominent among Chinese investors, which results in the momentum effect in the A-share market.</p>
 				<ul class="list">
-					<li>Constructed tradable indexes for all sectors. The price fluctuations of the indexes represent the overall price fluctions of respective sectors.</li>
+					<li>Constructed tradable indexes for all sectors. The price fluctuations of the indexes represent the overall price fluctuations of respective sectors.</li>
 					<li>Tried to quantize the momentum effect of sectors.</li>
 				</ul>
 			</div>
@@ -125,7 +125,7 @@
 			<table>
 				<tr>
 					<td>Self-assessment</td>
-					<td>Hardworking, Passion</td>
+					<td>Hardworking, Passionate</td>
 				</tr>
 				<tr>
 					<td>Skills</td>
