--- a/简历.html
+++ b/简历.html
@@ -106,7 +106,7 @@
 			<div class="item">
 				<h3><strong>行业轮动</strong></h3>
 				<p class="overview">考虑到在中国投资者中显著的羊群效应，因而策略倾向于研究A股市场的动量效应。</p>
-					<li>构建每个行业的可交易的指数，各个指数的价格波动反应了相关行业的总体价格波动。</li>
+					<li>构建每个行业的可交易的指数，各个指数的价格波动反映了相关行业总体的价格波动。</li>
 					<li>对行业之间的动量效应进行量化分析。</li>
 	
 			</div>
