--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
 				<div class="org">Renmin University of China</div>
 			</div>
 			<div class="item">
-				<h3>B.E. Network Engineering(Rank 1/60)</h3>
+				<h3>B.E. Network Engineering (Rank 1/60)</h3>
 				<div class="date">September 2009 - June 2013</div>
 				<div class="org">Dalian University of Technology</div>
 			</div>	
@@ -55,10 +55,10 @@
 				<div class="date">January 2014 - Now</div>
 				<div class="org">XHTH Asset Management Co., Ltd.</div>
 				<ul class="list">
-					<li>Developed some event driven strategies(Analyst Reports, Company Earnings Reports) and used them to trade.(20 Million Yuan)</li>
-					<li>Developed some alpha strategies and used them to trade.(Sharpe 5.0, 30 Million Yuan)</li>
+					<li>Developed some event driven strategies (Analyst Reports, Company Earnings Reports) and used them to trade. (20 Million Yuan)</li>
+					<li>Developed some alpha strategies and used them to trade. (Sharpe 5.0, 30 Million Yuan)</li>
 					<li>Constructed tools to hedge most of the price fluctuations of the mother fund, so as to obtain the premiums and discounts in the Grade fund market with low risk.</li>
-					<li>Fundamental alpha(Not industry neutral): Chose the stocks with low PE, low PB and high dividend. Different thresholds depend on different market conditions.</li>
+					<li>Fundamental alpha (not industry neutral): Chose the stocks with low PE, low PB and high dividend. Different thresholds depend on different market conditions.</li>
 				</ul>
 			</div>
 			<div class="item">
@@ -66,9 +66,9 @@
 				<div class="date">February 2013 - August 2013</div>
 				<div class="org">Shanghai Mingshi Investment Management Co., Ltd.</div>
 				<ul class="list">
-					<li>Set up trading system and used it for stock index future arbitrage.(developed 5 extra similar trading systems corresponded to different security companies after my internship.)</li>
+					<li>Set up trading system and used it for stock index future arbitrage. (developed 5 extra similar trading systems corresponded to different security companies after my internship.)</li>
 					<li>Strategy research: exploited the finance news to trade stock.</li>
-                                        <li>Debugged and maintained the futures transaction system(CTP).</li>
+                                        <li>Debugged and maintained the futures transaction system (CTP).</li>
 				</ul>
 			</div>
 			<div class="item">
@@ -89,7 +89,7 @@
 				<h3>Insanity Alpha</h3>
 				<p class="overview">I traversed massive factors and chose the most predictive factors.</p>
 				<ul class="list">
-					<li>Used average return of respective sector as benchmark when searching the predictive factors. It reduces the influence of the SMB factor(Fama-French three factors model).</li>
+					<li>Used average return of respective sector as benchmark when searching the predictive factors. It reduces the influence of the SMB factor (Fama-French three factors model).</li>
 					<li>Made up 50 low correlative sub-strategies first, then combined the sub-strategies to form a final strategy. There were more than 500 stocks in final portfolio.</li>
 					<li>Applied the Julia language in Bake test. It made the Billion Magnitude CPU calculations possible.</li>
 					
