--- a/简历.html
+++ b/简历.html
@@ -90,7 +90,7 @@
 				<p class="overview">在我搭建的Alpha框架下，遍历数十万个因子，并从中选取出具有预测能力的因子来构建Alpha策略。</p>
 				<ul class="list">
 					<li>使用行业的平均回报作为衡量基准来搜索有预测能力的因子，降低SMB因子对模型的影响（Fama三因子模型）。</li>
-					<li>使用足够多的因子构建50个低相关性的子策略，之后再将这些子策略合并成最终的策略。在最后的投资组合中股票个数超过500只。</li>
+					<li>使用足够多的因子构建50个低相关性的子策略，之后再将这些子策略合并成最终的策略。在最终的投资组合中股票个数超过500只。</li>
 					<li>使用Julia编程语言进行回测，这使得亿量级的回测计算成为可能</li>
 					
 				</ul>
