--- a/简历.html
+++ b/简历.html
@@ -91,7 +91,7 @@
 				<ul class="list">
 					<li>使用行业的平均回报作为衡量基准来搜索有预测能力的因子，降低SMB因子对模型的影响（Fama三因子模型）。</li>
 					<li>使用足够多的因子构建50个低相关性的子策略，之后再将这些子策略合并成最终的策略。在最终的投资组合中股票个数超过500只。</li>
-					<li>使用Julia编程语言进行回测，这使得亿量级的回测计算成为可能</li>
+					<li>使用Julia编程语言进行回测，这使得亿量级的回测计算成为可能。</li>
 					
 				</ul>
 			</div>
@@ -125,16 +125,16 @@
 				</tr>
 				<tr>
 					<td>性格</td>
-					<td>勤奋, 工作兢兢业业， 富有激情</td>
+					<td>勤奋, 工作兢兢业业， 富有激情。</td>
 				</tr>
 				<tr>
 					<td>技能</td>
-					<td>R, Python, Julia, C/C++</td>
+					<td>R, Python, Julia, C/C++。</td>
 				</tr>
 				
 				<tr>
 					<td>爱好</td>
-					<td>阅读, 运动</td>
+					<td>阅读, 运动。</td>
 				</tr>
 
 			</table>
