--- a/简历.html
+++ b/简历.html
@@ -56,7 +56,7 @@
 				<div class="org">宁波宽信资产管理有限公司</div>
 				<ul class="list">
 					<li>开发事件驱动策略（业绩预告、业绩快报、分析师报告）并进行实盘交易。(2000万)</li>
-					<li>开发两个Alpha策略并进行实盘交易。(回测夏普5.0, 3000万)</li>
+					<li>开发两个Alpha策略并进行实盘交易。(3000万)</li>
 					<li>通过构建一个可以对冲母基金大部分波动的工具，使得我们能够以较低的风险来获取分级基金市场中的溢价和折价。</li>
 					<li>基本面量化（非行业中性）：选择低市盈率、低市净率、高分红的股票。同时在不同的市场环境中设定不同的阈值来定义低市盈率和低市净率。</li>
 				</ul>
