--- a/简历.html
+++ b/简历.html
@@ -52,7 +52,7 @@
 		<div class="col-right">
 			<div class="item">
 				<h3>量化交易员</h3>
-				<div class="date">2014.1 - 至今</div>
+				<div class="date">2014.1 - 2015.7</div>
 				<div class="org">宁波宽信资产管理有限公司</div>
 				<ul class="list">
 					<li>开发事件驱动策略（业绩预告、业绩快报、分析师报告）并进行实盘交易。(2000万)</li>
