--- a/简历.html
+++ b/简历.html
@@ -57,6 +57,7 @@
 				<ul class="list">
 					<li>开发事件驱动策略（业绩预告、业绩快报、分析师报告）并进行实盘交易。(2000万)</li>
 					<li>开发两个Alpha策略并进行实盘交易。(3000万)</li>
+					<li>他山之石：研究二十多位卖方分析师的报告，与分析师联系，维护并跟踪他们推荐的股票组合。</li>
 					<li>通过构建一个可以对冲母基金大部分波动的工具，使得我们能够以较低的风险来获取分级基金市场中的溢价和折价。</li>
 					<li>基本面量化（非行业中性）：选择低市盈率、低市净率、高分红的股票。同时在不同的市场环境中设定不同的阈值来定义低市盈率和低市净率。</li>
 				</ul>
