--- a/resume.html
+++ b/resume.html
@@ -57,6 +57,7 @@
 				<ul class="list">
 					<li>Developed some event driven strategies (Analyst Reports, Company Earnings Reports) and used them to trade. (20 Million Yuan)</li>
 					<li>Developed some alpha strategies and used them to trade. (30 Million Yuan)</li>
+					<li>Monitored the performances of above 20 stock baskets from sell-side analysts reports.</li>
 					<li>Constructed tools to hedge most of the price fluctuations of the mother fund, so as to obtain the premiums and discounts in the Grade fund market with low risk.</li>
 					<li>Fundamental alpha (not industry neutral): Chose the stocks with low PE, low PB and high dividend. Different thresholds depend on different market conditions.</li>
 				</ul>
